<resources>
    <string name="app_name">sg</string>
    <string name="navigation_about">About</string>
    <string name="navigation_help">Help</string>
    <string name="navigation_giveaways">Giveaways</string>
    <string name="navigation_giveaways_all">All</string>
    <string name="navigation_giveaways_recommended">Recommended</string>
    <string name="navigation_giveaways_new">New</string>
    <string name="navigation_giveaways_wishlist">Wishlist</string>
    <string name="navigation_giveaways_group">Group</string>
    <string name="navigation_giveaways_all_title">All Giveaways</string>
    <string name="navigation_giveaways_recommended_title">Recommended Giveaways</string>
    <string name="navigation_giveaways_new_title">New Giveaways</string>
    <string name="navigation_giveaways_wishlist_title">Wishlist Giveaways</string>
    <string name="navigation_giveaways_group_title">Group Giveaways</string>
    <string name="navigation_discussions">Discussions</string>
    <string name="navigation_discussions_all">All</string>
    <string name="navigation_discussions_all_title">All Discussions</string>
    <string name="navigation_discussions_announcements">Announcements</string>
    <string name="navigation_discussions_announcements_title">Announcements</string>
    <string name="navigation_discussions_bugs_suggestions">Bugs / Suggestions</string>
    <string name="navigation_discussions_bugs_suggestions_title">Bugs / Suggestions</string>
    <string name="navigation_discussions_deals">Deals</string>
    <string name="navigation_discussions_deals_title">Deals</string>
    <string name="navigation_discussions_general">General</string>
    <string name="navigation_discussions_general_title">General Discussions</string>
    <string name="navigation_discussions_group_recruitment">Group Recruitment</string>
    <string name="navigation_discussions_group_recruitment_title">Group Recruitment</string>
    <string name="navigation_discussions_lets_play_together">"Let's Play Together"</string>
    <string name="navigation_discussions_lets_play_together_title">"Let's Play Together"</string>
    <string name="navigation_discussions_off_topic">Off-Topic</string>
    <string name="navigation_discussions_off_topic_title">Off-Topic</string>
    <string name="navigation_discussions_puzzles_events">Puzzles/Events</string>
    <string name="navigation_discussions_puzzles_events_title">Puzzles/Events</string>
    <string name="navigation_discussions_created">Created</string>
    <string name="navigation_discussions_created_title">Created Discussions</string>
    <string name="navigation_discussions_type">Category</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_profile_info">Level %1$d \u2022 %2$dP</string>
    <string name="navigation_sync">Sync</string>
    <string name="guest">Guest</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logged_out">Goodbye!</string>
    <string name="app_name_long">sg for SteamGifts - NV edition</string>
    <string name="about_made_with_love">made with {faw-heart} by kt\nmaintained with {faw-heart} by PrOF</string>
    <string name="about_issues">Report an Issue</string>
    <string name="about_source_code">Source Code</string>
    <string name="useful_links">SteamGifts</string>
    <string name="help">{faw-question-circle} Help</string>
    <string name="faq">FAQ</string>
    <string name="guidelines">Guidelines</string>
    <string name="comment_formatting">Comment Formatting</string>
    <string name="legal">{faw-balance-scale} Legal</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="cookie_policy">Cookie Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="enter_giveaway">Enter</string>
    <string name="enter_giveaway_with_points">Enter (%dP)</string>
    <string name="login_to_enter_giveaway">Login to Enter</string>
    <string name="leave_giveaway">Leave</string>
    <string name="leave_giveaway_with_points">Leave (%dP)</string>
    <plurals name="entries">
        <item quantity="one">%d entry</item>
        <item quantity="other">%d entries</item>
    </plurals>
    <plurals name="copies">
        <item quantity="one">%d copy</item>
        <item quantity="other">%d copies</item>
    </plurals>
    <string name="giveaway_groups">Groups</string>
    <string name="giveaway_winners">Winners</string>
    <string name="actions">Actions</string>
    <string name="add_comment">Comment</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="undelete_comment">Undelete Comment</string>
    <string name="send_comment">Send</string>
    <string name="comment_sent">Comment sent, reload to see it.</string>
    <string name="comment_not_sent">Comment could not be sent.</string>
    <string name="comment_edited">Comment successfully edited.</string>
    <string name="sending_comment">Submitting comment&#8230;</string>
    <string name="entering">Entering Giveaway&#8230;</string>
    <string name="send_comment_and_enter">Comment + Enter</string>
    <string name="unable_to_enter">Could not enter Giveaway.</string>
    <string name="discussion_locked">This discussion is locked.</string>
    <string name="viewing_single_context">You are viewing a single comment in context.\nClick to view all comments.</string>
    <string name="open_steam_store">Steam Store</string>
    <string name="open_steam_profile">Steam Profile</string>
    <string name="search">Search</string>
    <string name="end_of_endless_list">You\'ve reached the end.</string>
    <string name="open_browser">View in Browser</string>
    <string name="loading">Loading</string>
    <string name="hide_game">Hide Game</string>
    <string name="game_was_hidden">%s is hidden.</string>
    <string name="undo">Undo</string>
    <string name="user_whiteblacklist_removed">Removed %s.</string>
    <string name="hidden_game_removed">Removed %s.</string>
    <string name="more_like_this">More like this</string>
    <string name="go_to">Go to&#8230;</string>
    <string name="go_to_giveaway">Giveaway</string>
    <string name="go_to_discussion">Discussion</string>
    <string name="go_to_user">User</string>
    <string name="go_to_giveaway_hint">Giveaway ID</string>
    <string name="go_to_discussion_hint">Discussion ID</string>
    <string name="go_to_user_hint">Username</string>
    <string name="user_level">Level %d</string>
    <string name="user_giveaways_created">Sent</string>
    <string name="user_giveaway_won">Won</string>
    <string name="user_giveaways_created_count">%1$d sent\n%2$s</string>
    <string name="user_giveaway_won_count">%1$d won\n%2$s</string>
    <string name="user_trade_feedback_positive_count">Trades\n+%1$d</string>
    <string name="user_trade_feedback_negative_count">Trades\n-%1$d</string>
    <string name="user_trade_feedback_positive">Trades\n+</string>
    <string name="user_trade_feedback_negative">Trades\n-</string>
    <string name="private_giveaway">This giveaway is private.</string>
    <string name="view_profile">View Profile</string>
    <string name="user_tab_notifications">Messages</string>
    <string name="user_tab_won">Won</string>
    <string name="user_tab_entered">Entered</string>
    <string name="user_tab_created">Created</string>
    <string name="mark_read">Mark as Read</string>
    <string name="preferences">Settings</string>
    <string name="preference_theme_header">Theme</string>
    <string name="preference_theme_nightmode">Night Mode</string>
    <string name="preferences_giveaways">Giveaways</string>
    <string name="preference_giveaway_landing_page">Landing Page</string>
    <string-array name="preference_giveaways_landing_page_entries">
        <item>@string/navigation_giveaways_all_title</item>
        <item>@string/navigation_giveaways_recommended_title</item>
        <item>@string/navigation_giveaways_new_title</item>
        <item>@string/navigation_giveaways_wishlist_title</item>
        <item>@string/navigation_giveaways_group_title</item>
    </string-array>
    <string-array name="preference_giveaways_landing_page_entry_values">
        <item>ALL</item>
        <item>RECOMMENDED</item>
        <item>NEW</item>
        <item>WISHLIST</item>
        <item>GROUP</item>
    </string-array>
    <string name="preference_giveaway_load_images">Load Images</string>
    <string name="preference_giveaway_show_game_features">Load Game Features</string>
    <string name="preference_giveaway_show_pinned">Show Featured Giveaways first</string>
    <string name="preference_giveaway_quick_enter">Show quick Enter button</string>
    <string name="preference_giveaway_swipe_to_hide">Swipe giveaway to hide game</string>
    <string name="preferences_discussions">Discussions</string>
    <string name="preference_sidebar_discussion_list">Navigation Items</string>
    <string name="preference_discussion_comments_reversed">Inverse Comment Order</string>
    <string name="preference_discussion_comments_reversed_sub_off">Show oldest comments first</string>
    <string name="preference_discussion_comments_reversed_sub_on">Show newest comments first</string>
    <string name="preferences_sg_header">SteamGifts Account</string>
    <string name="preference_notifications">Show Notifications</string>
    <string name="preference_notification_settings_shortcut">Notification Settings</string>
    <string name="preference_sg_sync">Sync Account</string>
    <string name="preference_sg_whitelist">Whitelisted Users</string>
    <string name="preference_sg_blacklist">Blacklisted Users</string>
    <string name="preference_sg_hidden_games">Hidden Games</string>
    <string name="preference_sg_hidden_games_sub">Un-hide games from your account</string>
    <string name="preferences_other">Other</string>
    <string name="preference_browser">Open Links in</string>
    <string name="preference_default_app">Chrome Tabs</string>
    <string name="preference_default_app_summary">This app is not the default handler for SteamGifts URLs. Custom Chrome Tabs only open links in this app if it is set as default app.</string>
    <string name="intro_giveaway_context">Long-Click a Giveaway or Comment to quickly enter or comment.</string>
    <string name="intro_giveaway_context_header">Context Menus</string>
    <string name="intro_giveaway_indicators_header">Indicators</string>
    <string name="intro_giveaway_indicators_giveaway_header">Giveaway Indicators</string>
    <string name="intro_giveaway_indicators_whitelist">Whitelist Giveaway</string>
    <string name="intro_giveaway_indicators_group">Group Giveaway</string>
    <string name="intro_giveaway_indicators_level_positive">At or below your Level</string>
    <string name="intro_giveaway_indicators_level_negative">Above your Level</string>
    <string name="intro_giveaway_indicators_private">Private Giveaway</string>
    <string name="intro_giveaway_indicators_region_restricted">Region Restricted</string>
    <string name="intro_giveaway_indicators_game_features_header">Game Indicators</string>
    <string name="intro_giveaway_indicators_cards">Trading Cards</string>
    <string name="filter">Filter Giveaways</string>
    <string name="placeholder_giveaway_creator">{faw-user} Creator</string>
    <string name="placeholder_giveaway_start">{faw-calendar} Start</string>
    <string name="placeholder_giveaway_end">{faw-clock} End</string>
    <string name="placeholder_giveaway_description">Description of the Giveaway you\'re about to enter</string>
    <string name="placeholder_giveaway_entries">{faw-users} Entries</string>
    <string name="placeholder_giveaway_copies">{faw-clone} Copies</string>
    <string name="sort_by">Sort by</string>
</resources>