<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter_variant"
        android:title="@string/filter"
        android:visible="false"
        app:actionLayout="@layout/menu_action_item_badge"
        app:showAsAction="ifRoom"
        tools:visible="true" />

    <item
        android:id="@+id/category"
        android:icon="@drawable/ic_filter_variant"
        android:title="@string/navigation_discussions_type"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true" />

    <item
        android:id="@+id/sort"
        android:title="@string/sort_by"
        android:visible="false"
        app:ico_color="@android:color/white"
        app:ico_icon="@string/faw_sort_amount_desc"
        app:ico_size="@dimen/app_bar_icon_size"
        app:showAsAction="ifRoom"
        tools:visible="true" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_magnify"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>
