<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorBehindCardBackground">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin_outer"
        card_view:cardBackgroundColor="?attr/colorCardBackground"
        card_view:cardCornerRadius="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:gravity="start"
                android:paddingHorizontal="12dp"
                android:paddingTop="@dimen/card_margin_outer">

                <TextView
                    android:id="@+id/giveaway_name"
                    style="@style/BigText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Title" />

                <com.mikepenz.iconics.view.IconicsImageView
                    android:id="@+id/game_hidden_indicator"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginLeft="@dimen/card_margin_small"
                    android:baselineAlignBottom="true"
                    android:visibility="gone"
                    app:iiv_color="@color/md_red_500"
                    app:iiv_icon="@string/faw_eye_slash"
                    tools:src="@drawable/circle_indicator_blank"
                    tools:tint="@color/md_red_500"
                    tools:visibility="visible" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/card_margin_outer">

                <androidx.constraintlayout.helper.widget.Flow
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/card_margin_small"
                    app:constraint_referenced_ids="user,created,entries,copies"
                    app:flow_horizontalBias="0"
                    app:flow_horizontalStyle="packed"
                    app:flow_wrapMode="chain"
                    app:layout_constraintEnd_toStartOf="@id/remaining"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.mikepenz.iconics.view.IconicsTextView
                    android:id="@+id/user"
                    style="@style/SmallText.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/card_margin_small"
                    android:text="@string/placeholder_giveaway_creator"
                    android:textStyle="bold"
                    app:emojiCompatEnabled="false"
                    tools:text="👤 Creator" />

                <com.mikepenz.iconics.view.IconicsTextView
                    android:id="@+id/created"
                    style="@style/SmallText.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/card_margin_small"
                    android:text="@string/placeholder_giveaway_start"
                    app:emojiCompatEnabled="false"
                    tools:text="📅 Started" />

                <com.mikepenz.iconics.view.IconicsTextView
                    android:id="@+id/entries"
                    style="@style/SmallText.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/card_margin_small"
                    android:text="@string/placeholder_giveaway_entries"
                    app:emojiCompatEnabled="false"
                    tools:text="👥 Entries" />

                <com.mikepenz.iconics.view.IconicsTextView
                    android:id="@+id/copies"
                    style="@style/SmallText.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/card_margin_small"
                    android:text="@string/placeholder_giveaway_copies"
                    app:emojiCompatEnabled="false"
                    tools:text="📔 Copies" />


                <com.mikepenz.iconics.view.IconicsTextView
                    android:id="@+id/remaining"
                    style="@style/SmallText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/card_margin_small"
                    android:text="@string/placeholder_giveaway_end"
                    android:textColor="?attr/lightTextColor"
                    app:emojiCompatEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="🕒 End" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/card_margin_outer"
                android:paddingRight="@dimen/card_margin_outer">

                <View
                    android:id="@+id/separator"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_margin="4dp"
                    android:background="?attr/colorLightSeparatorBackground" />

                <TextView
                    android:id="@+id/description"
                    style="@style/MediumText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/progressBar"
                    android:padding="@dimen/card_margin_small"
                    android:text="@string/placeholder_giveaway_description"
                    android:visibility="visible" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/separator"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:indeterminate="true"
                    android:paddingBottom="@dimen/card_margin_outer"
                    android:paddingTop="@dimen/card_margin_outer"
                    android:visibility="gone" />

                <View
                    android:id="@+id/action_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_below="@+id/description"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="4dp"
                    android:background="?attr/colorLightSeparatorBackground" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/login"
                    style="@style/MediumButton.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_to_enter_giveaway"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/error"
                    style="@style/MediumButton.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="Error Message"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/enter"
                    style="@style/MediumButton.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_giveaway"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/leave"
                    style="@style/MediumButton.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leave_giveaway"
                    android:visibility="gone" />

                <com.mikepenz.iconics.view.IconicsButton
                    android:id="@+id/winners"
                    style="@style/MediumButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:emojiCompatEnabled="false"
                    tools:text="🏆" />

                <Button
                    android:id="@+id/comment"
                    style="@style/MediumButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_comment"
                    android:visibility="gone" />

                <android.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <include
                    layout="@layout/image_link_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.mikepenz.iconics.view.IconicsButton
                    android:id="@+id/indicator"
                    style="@style/MediumButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:emojiCompatEnabled="false"
                    tools:text="L10+" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
